[package]
name = "reex-ast"
version = "0.1.0"
authors = ["eater <=@eater.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
tinyvec = { version = "1.1.1", features = ["alloc"] }
reex-vm = { path = "../reex-vm", version = "0.1.0" }
tinyvec_string = { version = "0.2.0", features = ["alloc"] }