[package]
name = "reex-web"
version = "0.1.0"
authors = ["eater <=@eater.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = { version = "0.17", features = ["web_sys"] }
reex = { path = "../reex", version = "0.1.0" }
reex-ast = { path = "../reex-ast", version = "0.1.0" }
web-sys = { version= "0.3.49", features = ["Selection", "Range", "Window", "Document", "HtmlDocument"] }