[package]
name = "reex"
version = "0.1.0"
authors = ["eater <=@eater.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reex-ast = { version = "0.1.0", path = "../reex-ast", optional = true }
reex-vm = { version = "0.1.0", path = "../reex-vm" }

[features]
default = ["parser"]
parser = ["reex-ast"]